fixed project moving issue, visualization alignment

--- a/webservice/src/main/resources/app/styles/css/graph-style.css
+++ b/webservice/src/main/resources/app/styles/css/graph-style.css
@@ -479,5 +479,6 @@ svg>foreignObject>p {
   cursor: move;
 }
 .no-data-label {
-  margin: 10px;
+  margin: 0px;
+  padding: 10px;
 }
